--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <a href="https://gmail.com">Gmail</a>
           <a href="https://unsplash.com">Unsplash</a>
           <a href="https://www.linkedin.com/in/daneker-kaliaskaruly-1758b625a/">Linkedin</a>
-          <a href="https://beacons.ai/developerrahul">About</a>
+      
         </div>
       <div class="mycontainer" style="padding-left: 30%; padding-right: 30%; padding-top: 1%;">
         <div id="header-container">
@@ -37,7 +37,7 @@
               <a href="https://www.linkedin.com/in/daneker-kaliaskaruly-1758b625a/" class="Linkedin" aria-label="fa-linkedin-in">
                 <i class="fab fa-linkedin-in"></i>
               </a>
-              <a href="https://github.com/Daneker4317" class="social-button social-button--github" aria-label="GitHub">
+              <a href="https://github.com/youngAndMad" class="social-button social-button--github" aria-label="GitHub">
                 <i class="fab fa-github"></i>
               </a>
             </div></div>
@@ -114,7 +114,7 @@
             </div>
           </a>
         
-          <a href="#">
+          <a href="https://github.com/youngAndMad">
             <i class="fa-brands fa-github"></i>
             <div class="label">
               <span class="name">Github</span>
